# NKit

./: ARCHITECTURE.md  CHANGELOG.md  MIGRATION_GUIDE.md  MODULAR_ARCHITECTURE.md  QUICKREF.md  README.md  SUMMARY.md  __init__.py  pyproject.toml  readme.md  security.py  utils.py
.github/: copilot-instructions.md
agent/: __init__.py  core.py
audit/: __init__.py
chain/: __init__.py  graph.py
cli/: __init__.py
crews/: __init__.py
events/: __init__.py
examples/: blog_writer_gemini.ipynb  blog_writing_agent.ipynb  demo_graph.py  demo_rag_agent.py  demo_simple_agent.py  enterprise_audit_demo.py  framework_wrapper_demo.py  gemini_agent.py  github_pr_agent.ipynb  integrated_agent_demo.py  lmstudioIntegration.ipynb  local_agent.py  multi_agent_research.py  pot_basic.py  pot_blog_agent.py  pot_quickstart.py  pot_research_example.py  pot_simple_blog.py  pot_workflow_example.py  pot_workflow_example_fixed.py  safe_file_agent.py
executor/: __init__.py
hooks/: __init__.py
knowledge/: __init__.py
legacy/: README.md  interfaces.py  llm_adapter.py  prompt.py  retrieval.py
llms/: __init__.py  rate_limiter.py
memory/: __init__.py
nanoagents/: __init__.py  chain.py  llm_adapter.py  memory.py  nbagents.py  tools.py  utils.py
nkit/: __init__.py  llm_adapter.py  nbagents.py  prompt.py  utils.py
observer/: __init__.py
planner/: __init__.py
program/: __init__.py
safety/: __init__.py
scripts/: test_poetry.ps1
tasks/: __init__.py
telemetry/: __init__.py
tests/: test_enhanced.py
tools/: __init__.py  builtin_tools.py  dynamic.py
(+13 files in other folders)
