[tool.poetry]
name = "nkit"
version = "0.2.0"
description = "A nano, minimalistic, and lightweight library for building ReACT-based AI agents that use tools to solve tasks."
authors = ["NavuluriBalaji <navuluribalaji03@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0"

[tool.poetry.scripts]
test = "pytest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = [".git", ".tmp*", "scripts"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
